--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -45,6 +45,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/(%app_locales%)/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/(%app_locales%)/admin, roles: ROLE_ADMIN}
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMINISTRATOR}
