--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 /public/images
 ###> liip/imagine-bundle ###
 /public/media/cache/
-/public/base/node_modules
 ###< liip/imagine-bundle ###
 ###> phpstorm project files
 /.idea/
@@ -19,3 +18,5 @@
 
 # CUSTOM
 .env
+/public/base/node_modules
+/public/base/package-lock.json
