--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,6 @@ MAILER_DSN=smtp://localhost
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL="mysql://root:@127.0.0.1:3306/nombre_de_database"
 ###< doctrine/doctrine-bundle ###
+
+# NOMBRE DE LA APLICACIÓN
+SITE_NAME="NOMBRE APP"
