--- a/public/base/package.json
+++ b/public/base/package.json
@@ -33,7 +33,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.15.3",
         "bootstrap": "4.6.0",
-        "datatables.net-bs4": "1.10.24",
+        "datatables.net-bs4": "^1.11.3",
         "jquery": "3.6.0",
         "jquery.easing": "^1.4.1"
     },
