--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ APP_SECRET=a01bdb2503c86b1bb3bad2ff71c19de5
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+MAILER_DSN="smtp://tasadejusticia@justicialarioja.gob.ar:w.Op1-222awjp@mail.justicialarioja.gob.ar:465"
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
