--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,8 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "5.1.*"
+            "require": "5.1.*",
+            "docker": false
         }
     }
 }
