--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "ext-ctype": "*",
-        "ext-gd": "^7.4",
+        "ext-gd": "^8.2",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/common": "^2",
@@ -50,7 +50,10 @@
             "php": "7.4.0"
         },
         "platform-check": false,
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
