--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.4",
+        "php": "^7.2.5|^8.0",
         "ext-ctype": "*",
         "ext-gd": "^8.2",
         "ext-iconv": "*",
