--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 controllers:
     resource: '../src/Controller/'
     type: annotation
+
+
+ipsscan:
+    path: /ipsscan
+    controller: App\Controller\IPScanController::scanIPs
