--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,7 @@ services:
             $projectDir: '%kernel.project_dir%'
             $uploadPath: '%kernel.project_dir%/public/images'
 
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -32,3 +33,8 @@ services:
 
     App\EventSubscriber\RedirectToLocaleSubscriber:
         arguments: ['@router', kernel.default_locale]
+
+
+    App\Service\IpScannerService:
+        arguments:
+            $entityManager: '@doctrine.orm.default_entity_manager'
